[tool.poetry]
name = "pyvultr"
version = "0.1.1"
description = "Python library for Vultr API"
authors = ["fishermanadg <fishermanadg@gmail.com>"]
license = "MIT"
readme = 'README.md'
keywords = ["vultri", "api", "cloud", "vultr-api"]
repository = "https://github.com/luxiaba/pyvultr.git"
homepage = "https://github.com/luxiaba/pyvultr"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.6.2"
requests = "^2.26.0"
dacite = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.11b1"
pre-commit = "^2.15.0"
pytest-cover = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py36"]
line-length = 120

[tool.isort]
# https://github.com/psf/black/blob/06ccb88bf2bd35a4dc5d591bb296b5b299d07323/docs/guides/using_black_with_other_tools.md#isort
profile = "black"
line_length = 120

[tool.bandit]
# skip check for `B101`(assert used)
# https://bandit.readthedocs.io/en/latest/plugins/index.html#complete-test-plugin-listing
# https://bandit.readthedocs.io/en/latest/blacklists/index.html#complete-plugin-listing
recursive = true
skips = ["B101"]

[tool.pydocstyle]
ignore = "D100, D101, D104, D107, D203, D213, D406, D407, D413"
# D100: docstring in public module.
# D101: docstring in public class.
# D104: docstring in public packag.
# D107: docstring in `__init__`.
# D203: 1 blank line required before class docstring.
# D212: Multi-line docstring summary should start at the first line.
# D213: Multi-line docstring summary should start at the second line.
# D406: Section name should end with a newline.
# D407: Missing dashed underline after section.
# D413: Missing blank line after last section.
